discussion/kv_engine/156409/156409_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Thread name

Change-Id: I990fe4d634f580e99a109d02227e6f157a4ebc5f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-06-24 13:45:05.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-24 13:48:53.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10224/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/spdlogger.cc:69:9: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
        pthread_t* thread = reinterpret_cast<pthread_t*>(msg.thread_id);
        ^~~~~~~~~
        auto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/spdlogger.cc:72:18: error: no member named "cerr" in namespace "std" [clang-diagnostic-error]
            std::cerr << "pthread_getname_np failed: " << strerror(result)
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/spdlogger.cc:76:14: error: no member named "cerr" in namespace "std" [clang-diagnostic-error]
        std::cerr << "format() msg.thread_id:" << msg.thread_id
             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10224/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/spdlogger.cc:72:18:
error: no member named "cerr" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10224/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8822/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-01-10 12:33:17.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
